fix: 抽离 xxljob http 代码